<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:src="@drawable/ic_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginTop="23dp"
        app:layout_constraintStart_toStartOf="@+id/card"
        app:layout_constraintTop_toTopOf="@+id/card" />

    <TextView
        android:id="@+id/department"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/department"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="@+id/card"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ID"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="@+id/card"
        app:layout_constraintTop_toBottomOf="@+id/department" />

    <TextView
        android:id="@+id/room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/room"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="@+id/card"
        app:layout_constraintTop_toBottomOf="@+id/ID" />

    <TextView
        android:id="@+id/D_ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/D_ID"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="@+id/card"
        app:layout_constraintTop_toBottomOf="@+id/room" />

    <TextView
        android:id="@+id/S_department"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/S_department"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="93dp"
        app:layout_constraintStart_toStartOf="@+id/card"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/S_ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/S_ID"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="93dp"
        app:layout_constraintStart_toStartOf="@+id/card"
        app:layout_constraintTop_toBottomOf="@+id/department" />

    <TextView
        android:id="@+id/S_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/S_room"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="93dp"
        app:layout_constraintStart_toStartOf="@+id/card"
        app:layout_constraintTop_toBottomOf="@+id/ID" />

    <TextView
        android:id="@+id/S_D_ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/S_D_ID"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="93dp"
        app:layout_constraintStart_toStartOf="@+id/card"
        app:layout_constraintTop_toBottomOf="@+id/room" />

</androidx.constraintlayout.widget.ConstraintLayout>