<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar_design"
    android:layout_width="match_parent"
    android:layout_height="53dp"
    app:contentInsetStart="0dp"
    android:background="@color/white"
    android:elevation="10dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ImageView
            android:id="@+id/toolbar_logo"
            android:layout_width="49dp"
            android:layout_height="33dp"
            android:src="@drawable/logo_toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="18dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/app_logo" />

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="123dp"
            android:layout_height="21dp"
            app:layout_constraintStart_toEndOf="@id/toolbar_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/title"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="13dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:layout_constraintStart_toEndOf="@id/toolbar_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/toolbar_logout"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="11dp"
            android:layout_marginStart="163dp"
            android:contentDescription="@string/logout"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.appcompat.widget.Toolbar>